--- a/package.json
+++ b/package.json
@@ -11,5 +11,7 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
-  }
+  },
+  "optionalDependencies": {},
+  "readmeFilename": "README.md"
 }
