Fixes to the file explorer

--- a/src/config.json
+++ b/src/config.json
@@ -7,7 +7,7 @@
       "added": {
         "order": 1,
         "type": "string",
-        "default": "plus-circled-outline"
+        "default": "plus-circled-filled"
       },
       "modified": {
         "order": 2,
