--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
+    "autobind-decorator": "^2.1.0",
     "fs-plus": "^3.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
